# taktoga

./: LICENSE  Makefile  pyproject.toml
dockerfiles/: dev.dockerfile
src/taktoga/: __init__.py  app.py  component.py  pyodchecks.py
src/taktoga/components/: __init__.py
