[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taktoga"
version = "0.1.0"
dependencies = ["toga", "efus", "atak", "pyoload>=3.0.0"]
authors = [
    {name = "Engon Ken Morel", email = "engonken8@gmail.com"}
]
maintainers = [
    {name = "Engon Ken Morel", email = "engonken8@gmail.com"}
]
description = "Efus bindings for toga."
readme = "README.md"
license = {file = "LICENSE"}
keywords = []
classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # "Topic :: Software Development :: Build Tools",

    # Pick your license as you wish (see also "license" above)
    # "License :: OSI Approved :: MIT License",
    #$$ licence
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/recordbreakersorg/taktoga"
Repository = "https://github.com/recordbreakersorg/taktoga"
Issues = "https://github.com/recordbreakersorg/taktoga/issues"
